--- a/kotlin/build.gradle
+++ b/kotlin/build.gradle
@@ -3,4 +3,5 @@ apply plugin: 'kotlin'
 
 dependencies {
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+  testImplementation('junit:junit:4.13')
 }
